2006-06-18  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/FreetypeGlyphVector.java
	(FreetypeGlyphVector, clone): Implement cloning.
	(getGlyphLogicalBounds): Bounds should be offset to the glyph position.
	* java/awt/font/TextMeasurer.java: Implement.
	* java/awt/font/LineBreakMeasurer.java: 
	Reimplement to use TextMeasurer.
	* java/awt/font/TextLayout.java
	New constructors.
	(getBlackboxBounds, getLogicalHighlightShape): Reimplement.
	(getText, getFont): New private static methods.
	(setCharIndices): New method.
	* java/text/AttributedString.java
	(AttributedString): Fix constructor to stop at end point.
	
2006-06-12  Mario torre  <neugens at limasoftware.net>

	* gnu/java/util/prefs/GConfBasedPreferences.java: new class.
	* gnu/java/util/prefs/GConfBasedFactory.java: new class.
	* gnu/java/util/prefs/gconf/GConfNativePeer.java: new class.
	* gnu_java_util_prefs_gconf_GConfNativePeer.h: generated
	header file.
	* classpath/native/jni/gconf-peer/GConfNativePeer.c: new C file.
	* configure.ac: update to introduce new files. Added options
	to build gconf native peer used by the GConf preference backend.
	* include/Makefile.am: update to introduce new files.
	* native/jni/Makefile.am update to introduce new files.
	* scripts/check_jni_methods.sh: added three new ignored file
	from check.
	* native/jni/gconf-peer/Makefile.am: new Makefile needed to
	build gconf-peer shared library.

2006-06-17  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/jce/sig/DSSKeyPairGeneratorSpi.java:
	Use Integer.valueOf() instead of new Integer().
	* gnu/java/security/jce/sig/EncodedKeyFactory.java: Likewise.
	* gnu/java/security/jce/sig/RSAKeyPairGeneratorSpi.java: Likewise.
	* gnu/java/security/util/Sequence.java: Likewise.
	* gnu/java/security/x509/ext/GeneralNames.java: Likewise.
	* gnu/java/security/x509/X509Certificate.java: Likewise.
	* gnu/javax/crypto/assembly/ModeStage.java: Likewise.
	* gnu/javax/crypto/cipher/Anubis.java: Likewise.